# PS-Helper

./: .gitignore  README.md  pyproject.toml
.github/workflows/: flake8.yml
src/ps_helper/: __init__.py  cli.py  hello.py  url_blocker.py
src/ps_helper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/ps_helper/blockers/: url_blocker.py
src/ps_helper/cli/: main.py
src/ps_helper/extensions/: README.md  __init__.py  curl_metrics.py  metrics_extension.py  slack_alerts.py
src/ps_helper/middlewares/: README.md  context_factory.py  proxy_rotator.py
src/ps_helper/mixins/: README.md  input_mixin.py
src/ps_helper/pdf/: README.md  pdf_analyzer.py
src/ps_helper/scripts/: generate_report.py  utils.py
tests/: pdf_analyzer_test.py  test_curl_metrics.py  test_proxy_middlewares.py
tests/PS-TEST-PDF-ANALYZER/: .flake8  .gitignore  README.md  estela.yaml  requirements.txt
tests/PS-TEST-PDF-ANALYZER/.estela/: Dockerfile-estela
tests/PS-TEST-PDF-ANALYZER/.github/: pull_request_template.md
tests/PS-TEST-PDF-ANALYZER/.github/workflows/: deploy.yml  flake8.yml
tests/PS-TEST-PDF-ANALYZER/scrapy_template/: items.py  middlewares.py  pipelines.py  settings.py
tests/PS-TEST-PDF-ANALYZER/scrapy_template/spiders/: test_pdf_analyzer.py
