[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ps-helper"
version = "0.1.0"
description = "Helper tools for the Professional Services team"
authors = [
  { name="Professional Services Team", email="your-email@company.com" }
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
  "click>=8.0",
]

[project.scripts]
ps-helper = "ps_helper.cli:main"

[tool.setuptools.packages.find]
where = ["."]
