[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ps-helper"
version = "0.1.0"
description = "Helper tools for the Professional Services team"
authors = [
  { name="Professional Services Team", email="your-email@company.com" }
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
  "click>=8.0",
  "scrapy>=2.11",
  "Twisted==22.10.0",
  "smart_open",
  "Cerberus",
  "pydantic>=2.0",
  "pymupdf>=1.24.0",
  "pytesseract>=0.3.10",
  "pillow>=10.0.0",
  "requests>=2.31.0",
]

[project.scripts]
ps-helper = "ps_helper.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]
